# thi-monitor-rs

./: Cargo.toml  README.md
avr-specs/: avr-atmega328p.json
src/: dht20.rs  main.rs  traits.rs
src/traits/: tmphum.rs
thi/: Cargo.toml  README.md
thi/avr-specs/: avr-attiny88.json
thi/src/: main.rs
