[package]
name = "thi"
version = "0.1.0"
authors = ["donabe8898 <60559703+donabe8898@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "thi"
test = false
bench = false

[features]
default = []
mag = []

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2"
ufmt_float = { git = "https://github.com/tl8roy/ufmt_float" }
nb = "0.1.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5", default-features = false, features = ["heapless"]}
quaternion-core = { version = "0.3", default-features = false, features = ["libm"]}
embedded-hal = "0.2.7"
pwm-pca9685 = "0.3.1"
infrared = "0.14.1"
embedded-storage = "0.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
features = ["arduino-uno"]

[dependencies.num-traits]
version = "0.2.15"
default-features = false
features = ["libm"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
